--- a/src/layouts/InstantQuoteLayout.astro
+++ b/src/layouts/InstantQuoteLayout.astro
@@ -87,7 +87,7 @@ const metadata = {
 	html,
 	body {
 		margin: 0;
-		margin-top: 32px;
+		/* margin-top: 32px; */
 		width: 100%;
 		height: 100%;
 	}
