--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -15,10 +15,8 @@ const metadata = {
   <section class="flex items-center h-full p-2 pt-8">
     <div class="container flex flex-col items-center justify-center px-5 mx-auto my-8">
       <span class="mb-8 text-center text-primary">Oops! We're still working on this page, but our phone is on!</span>
-      <p class="text-2xl text-center text-primary">Call <a aria-label="call 616-315-0979" href="tel:616-315-0979" class="underline">616-315-0979</a></p>
-      <p class="text-2xl text-center text-primary mb-8">to chat about pricing and how we relieve your web burden so you can grow your business.</p>
-      <span class="mb-8 text-center text-primary">See our Client Case Studies for more details.</span>
-      <span class="w-72 mb-4 text-center text-primary">You know how it is, always working on your customers' stuff, its hard to find time for your own.  :)</span>
+      <p class="text-2xl text-center text-primary">Call <a aria-label="call 555-867-5309" href="tel:555-867-5309" class="underline">555-867-5309</a></p>
+      <p class="text-2xl text-center text-primary mb-8">Getting a new water heater is a breeze with the Water Heater Replacement Company.</p>
       <h2 class="mb-8 font-bold text-6xl">
         <span class="sr-only">Error</span>
         <span class="text-primary">404</span>
