improve formatting for recommendation page

--- a/src/layouts/InstantQuoteLayout.astro
+++ b/src/layouts/InstantQuoteLayout.astro
@@ -76,7 +76,7 @@ const metadata = {
 	</head>
 
 
-	<body class="bg-gradient-to-b from-primary/0 to-primary/5 px-4 pt-16">
+	<body class="bg-gradient-to-b from-primary/0 to-primary/5">
 		<Navigation showNavigation={false}/>
 		<slot />
 		<!-- <Footer /> -->
