simplify hero sectio. fix quote links

--- a/src/components/Cta.astro
+++ b/src/components/Cta.astro
@@ -18,12 +18,10 @@ const {
 				<Phone />
 				<p>Talk to a Pro</p>
 			</a>
-            <a href="/instant-quote/" class="btn btn-outline text-lg w-full max-w-xs py-2 mx-auto">
+            <a href="/instant-quote/?step=1" class="btn btn-outline text-lg w-full max-w-xs py-2 mx-auto">
                 <PriceReceipt />
                 <p class="">Get My Instant Quote</p>
             </a>
-
-
 		</div>
 
 		<p class="mt-6 text-sm text-gray-500">No commitment. No pressure. Just fast, timely help when you need it.</p>
