--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -10,14 +10,14 @@ const faqs = [
 			On the other hand, a high-efficiency tankless system costs more to install but saves you money every month and lasts up to 10 years longer.
 			<br/><br/>
 
-			Get an <a href="/instant-quote/" class="text-primary font-bold">instant quote</a> to see the price range for both options based on your home setup and hot water needs.
+			Get an <a href="/instant-quote/?step=1" class="text-primary font-bold">instant quote</a> to see the price range for both options based on your home setup and hot water needs.
 			We’ll help you compare both and give you a clear, all-in price before any work starts — no surprises.`
 	},
 	{
 		question: "Do I really get a price without giving my email?",
 		answer: `Yes. You’re not a lead. You’re a person looking for hot water and we’re not here to trap you in a sales funnel. Besides, there are only so many ways to heat water.
 			<br/><br/>
-			Our <a href="/instant-quote/" class="text-primary font-bold">instant price quote quiz</a> will give you an accurate price range based on your answers, and you can decide if and when it works for you. No strings attached.
+			Our <a href="/instant-quote/?step=1" class="text-primary font-bold">instant price quote quiz</a> will give you an accurate price range based on your answers, and you can decide if and when it works for you. No strings attached.
 			<br/><br/>
 			We're always here to help if you have questions or need more details.`
 	},
@@ -61,7 +61,7 @@ const faqs = [
 		question: "Can I upgrade to a tankless system?",
 		answer: `Yes, you can absolutely upgrade to a tankless systems. Keep in mind not every home is ready for one simply by removing your old water heater — they often require gas line upgrades, additional venting, and an outlet installed nearby. We may even need to install a chimney liner if your old water heater shared a chiimney with your furnace or boiler. Each of these factors affects the installation cost.
 			<br/><br/>
-			While we try to give as rigid of a price range as possible with our <a href="/instant-quote/" class="text-primary font-bold">instant quote tool</a>, upgrading from a tank to tankless has the most 'unknowns' to verify. We’ll confirm the exact price on-site before starting work.`
+			While we try to give as rigid of a price range as possible with our <a href="/instant-quote/?step=1" class="text-primary font-bold">instant quote tool</a>, upgrading from a tank to tankless has the most 'unknowns' to verify. We’ll confirm the exact price on-site before starting work.`
 	},
 	{
 		question: "How long does the installation take?",
