--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -23,48 +23,53 @@ import CalendarClock from './icons/CalendarClock.astro';
             flex-col
             max-w-5xl
             mx-auto
-            xs:my-6
+            py-6
+            xs:pt-12
+            xs:pb-10
             md:py-20
             text-base-content
             text-center
             "
         >
             <div id="hero-section" class="p-4 flex flex-col flex-shrink-0 rounded-lg">
-                <p class="text-xl xs:text-2xl sm:text-4xl font-bold leading-tight mb-4">
-                    <!-- Get A Water Heater Replacement Quote in <span class="font-bold text-primary">Seconds</span> -->
-                    <!-- West Michigan's Answer to <span class="font-bold text-primary">"Why Is Replacing a Water Heater So Complicated?"</span> -->
+                <h1 class="text-xl xs:text-2xl sm:text-4xl font-bold leading-tight mb-4">
                     So How Much Does A Water Heater Replacement Cost?
-                </p>
+                </h1>
                 <p class=" text-xl xs:text-2xl sm:text-3xl font-bold leading-tight">
-                    Competitors: "<span class="text-secondary">It depends...</span>"
+                    Them: <span class="text-secondary">It depends...</span>
                 </p>
                 <p class="text-xl xs:text-2xl sm:text-3xl font-bold leading-tight mb-4">
-                    Us: "<span class="text-primary">Here’s your price.</span>"
+                    Us: <span class="text-primary">Here’s your price.</span>
                 </p>
+                <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-xl max-w-3xl mx-auto">
+                    Instant Quotes.
                 </p>
-                <h1 class="text-sm xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto">
-                    Get A Water Heater Replacement Quote in Seconds.
-                </h1>
-                <p class="text-sm xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto mb-6">
-                    No sales games. Just clear pricing and straightforward advice.
-                    <br> Serving West Michigan for over 25 years.
+                <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-xl max-w-3xl mb-4 mx-auto">
+                    Answers in minutes.
                 </p>
-                <!-- <p class="text-sm xs:text-md sm:text-2xl leading-tight sm:max-w-xl max-w-3xl mx-auto mb-6">
-                    Clear pricing. Straightforward advice.
-                    <br> Serving West Michigan for over 25 years.
-                </p> -->
-                <a href="tel:6165551234" class="btn btn-primary text-lg text-white py-2 w-64 max-w-xs mx-auto mb-4">
-                    <Phone />
-                    <p>Talk to a Pro</p>
-                </a>
-                <a href="/instant-quote/" class="btn btn-secondary text-lg text-white py-2 w-64 max-w-xs mx-auto mb-4">
+                <p class="sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto ">
+                    Skip the sales game.
+                </p>
+                <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mb-4 mx-auto ">
+                    Because fair pricing isn't a secret.
+                </p>
+
+                <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-xl max-w-3xl mx-auto mb-6">
+                    Book online today.
+                </p>
+
+                <a href="/instant-quote/?step=1" class="btn btn-primary text-lg text-white py-2 w-64 max-w-xs mx-auto mb-4">
                     <PriceReceipt />
                     <p>Instant Quote</p>
                 </a>
-                <a aria-label="Book Now" href="/pricing/" class="btn btn-outline text-lg bg-white/50 text-black py-2 w-64 max-w-xs mx-auto mb-4 shadow-sm">
-                    <CalendarClock />
-                    <p>Book Online</p>
+                <a href="tel:6165551234" class="btn btn-outline text-lg bg-white/50 text-black py-2 w-64 max-w-xs mx-auto mb-4 shadow-sm">
+                    <Phone />
+                    <p>Talk to a Pro</p>
                 </a>
+                <!-- <a aria-label="Book Now" href="/pricing/" class="btn btn-outline text-lg bg-white/50 text-black py-2 w-64 max-w-xs mx-auto mb-4 shadow-sm">
+                    <CalendarClock />
+                    <p>Ready To Schedule?</p>
+                </a> -->
             </div>
         </div>
         <div class="px-4 text-base-content text-center">
