add all images. improve model suggestions logic.

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -50,9 +50,9 @@ import CalendarClock from './icons/CalendarClock.astro';
                 <p class="sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto ">
                     Skip the sales game.
                 </p>
-                <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mb-4 mx-auto ">
+                <!-- <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mb-4 mx-auto ">
                     Because fair pricing isn't a secret.
-                </p>
+                </p> -->
 
                 <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-xl max-w-3xl mx-auto mb-6">
                     Book online today.
