--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -41,17 +41,17 @@ import CalendarClock from './icons/CalendarClock.astro';
                 <p class="text-xl xs:text-2xl sm:text-3xl font-bold leading-tight mb-4">
                     Us: <span class="text-primary">Here’s your price.</span>
                 </p>
-                <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-xl max-w-3xl mx-auto">
-                    Instant Quotes.
-                </p>
-                <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-xl max-w-3xl mb-4 mx-auto">
-                    Answers in minutes.
+                <p class="font-semibold xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mb-4 mx-auto ">
+                    Because fair pricing shouldn't be a secret.
                 </p>
                 <p class="sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto ">
                     Skip the sales game.
                 </p>
-                <!-- <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mb-4 mx-auto ">
-                    Because fair pricing isn't a secret.
+                <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-xl max-w-3xl mx-auto">
+                    Get an instant quote.
+                </p>
+                <!-- <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-xl max-w-3xl mb-4 mx-auto">
+                    Answers in minutes.
                 </p> -->
 
                 <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-xl max-w-3xl mx-auto mb-6">
