--- a/src/layouts/InstantQuoteLayout.astro
+++ b/src/layouts/InstantQuoteLayout.astro
@@ -42,13 +42,13 @@ const metadata = {
 <html lang="en">
 	<head>
 		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-MNV05LMPBV"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-BHGY4J6RHH"></script>
 		<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
 
-		gtag('config', 'G-MNV05LMPBV');
+		gtag('config', 'G-BHGY4J6RHH');
 		</script>
 
 		<meta charset="UTF-8" />
